app/css/themes/Windows 10 dark mode.css
/* Theme file: Windows 10 Dark Mode */

.w10dark {
  /* fonts */
  --font: 'Proxima Nova';
  --font-semibold: 'Proxima Nova Semibold';
  --font-bold: 'Proxima Nova Bold';

  /* color scheme */
  --app-color-main: #202125;
  --app-color-alt: #292a30;
  --app-font-color: #fafafb;
  --app-font-color-dimmed: #c5c6ce;
  --app-font-color-dimmedstrong: #8a8e91;

  /* navbar */
  --separator: #292a30;
  
  --spinner-color: #00e6ff;

  --tab-text: #c5c6ce;
  --tab-bg: transparent;
  --tab-text-hover: #fafafb;
  --tab-bg-hover: #32343a;
  --tab-text-select: #fafafb;
  --tab-bg-select: #44474f;

  /* buttons */
  --button-bg: #16a085;
  --button-text: #fafafb;
  --button-bg-hover: #2b678f;
  --button-text-hover: #fafafb;

  --button-donothing: #717684;
  --button-warn: #b11010;

  /* notification */
  --notification-bg: rgba(11, 11, 11, .7);
  --notification-border: #44474f;
  --notification-text: #fafafb;
  --notification-bg-hover: rgba(11, 11, 11, .9);
  --notification-text-hover: #fff;

  /* item list */
  --item-border: #292a30;
  --item-bg: #202125;
  --item-text: #fafafb;

  --item-title-bg: rgba(0, 0, 0, .4);
  --item-title-shadow: 0 0 20px black;
  --item-title: #fafafb;
  --item-year: #bbb;
  --item-eptitle: #ddd;

  /* lists */
  --scrollbar-track: transparent;
  --scrollbar: #eee;
  --scrollbar-hover: #fafafb;
  --waitbounce: #32343a;

  /* local list */
  --category-text: #bfbfbf;
  --category-border: #aaa;
  --category-bg: transparent;
  --category-text-hover: #fafafb;
  --category-border-hover: #888;
  --category-bg-hover: #32343a;

  --localitem-main: #202125;
  --localitem-main-hover: #292a30;
  --localitem-season: #292929;
  --localitem-season-hover: #2f2f2f;
  --localitem-episode: #393939;
  --localitem-episode-hover: #3f3f3f;

  --localitem-border: #292a30;
  --localitem-text: #fafafb;
  --localitem-subtext: #dfdfdf;

  /* settings */
  --settings-lines: #2f2f2f;
  --settings-text: #eff0f1;

  --localpaths-bg-hover: rgba(0, 0, 0, .1);
  --localpaths-bg-select: rgba(0, 0, 0, .3);
  --localpaths-text-select: #eff0f1;

  --yesno: #dadada;
  --slider-bg: #16a085;
  --slider-selector: #eff0f1;
  --dropdown-bg: #44474f;
  --dropdown-text: #fafafb;
  --input-placeholder: #a5a9b0;
  --input-text: #c5c6ce;
  --input-bg: #3c4043;

  /* about */
  --icons-hover-bg: rgba(240, 240, 240, .2)
}

